--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.intent">
 
+    <!-- PERMISSOES DE VERSOES ABAIXO DO MARSSHMELLOW sao feitas direto pelo manifest-->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <!-- FIM -->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Intent">
-        <activity android:name=".OutraActivity"></activity>
+        <activity android:name=".OutraActivity">
+            <intent-filter>
+                <action android:name="RECEBER_E_RETORNAR_ACTION"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
